# tmiv

./: .clang-tidy  .gitignore  .gitlab-ci.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TLibCommon.vcxproj  TLibCommon.vcxproj.filters  TLibDecoder.vcxproj  TLibDecoder.vcxproj.filters  TMIV.sln  TMIVConfig.cmake  TMIVConfigVersion.cmake  TMIVTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clang_format.vcxproj  clang_format.vcxproj.filters  cmake_install.cmake  install_manifest.txt  libmd5.vcxproj  libmd5.vcxproj.filters  module_graph.vcxproj  module_graph.vcxproj.filters
vvdec/: version.h
vvenc/: version.h
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/INSTALL/: INSTALL.recipe
x64/Release/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/RUN_TESTS/: RUN_TESTS.recipe
x64/Release/RUN_TESTS/RUN_TESTS.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
